--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,11 @@
             <span class="studi">Studio</span>
           </a>
           <ul class="nav-list list">
-            <li><a class="nav-link link navigation" href="./index.html">Studio</a></li>
-            <li><a class="nav-link link navigation" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="nav-link link navigation" href="">Contacts</a></li>
+            <li class="nav-list-item"><a class="nav-link link navigation" href="./index.html">Studio</a></li>
+            <li class="nav-list-item"
+              ><a class="nav-link link navigation active" href="./portfolio.html">Portfolio</a></li
+            >
+            <li class="nav-list-item"><a class="nav-link link navigation" href="">Contacts</a></li>
           </ul>
         </nav>
         <!-- Contact in header -->
@@ -63,7 +65,15 @@
           <ul class="card-container project list">
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-1.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-1.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Banking App Interface Concept</h2>
                   <p class="description">App</p>
@@ -72,7 +82,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-2.jpg" alt="Cashless Payment" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-2.jpg" alt="Cashless Payment" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Cashless Payment</h2>
                   <p class="description">Marketing</p>
@@ -81,7 +99,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-3.jpg" alt="Meditation App" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-3.jpg" alt="Meditation App" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Meditation App</h2>
                   <p class="description">App</p>
@@ -90,7 +116,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-4.jpg" alt="Taxi Service" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-4.jpg" alt="Taxi Service" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Taxi Service</h2>
                   <p class="description">Marketing</p>
@@ -99,7 +133,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-5.jpg" alt="Screen Illustrations" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-5.jpg" alt="Screen Illustrations" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Screen Illustrations</h2>
                   <p class="description">Design</p>
@@ -108,7 +150,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-6.jpg" alt="Online Courses" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-6.jpg" alt="Online Courses" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Online Courses</h2>
                   <p class="description">Marketing</p>
@@ -117,7 +167,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-7.jpg" alt="Instagram Stories Concept" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-7.jpg" alt="Instagram Stories Concept" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Instagram Stories Concept</h2>
                   <p class="description">Design</p>
@@ -126,7 +184,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-8.jpg" alt="Organic Food" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-8.jpg" alt="Organic Food" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Organic Food</h2>
                   <p class="description">Web Site</p>
@@ -135,7 +201,15 @@
             </li>
             <li class="project-list">
               <a class="card-project link" href="">
-                <img src="./images/projects/img-9.jpg" alt="Fresh Coffee" width="360" height="300" />
+                <div class="project-thumb">
+                  <img src="./images/projects/img-9.jpg" alt="Fresh Coffee" width="360" height="300" />
+                  <div class="overlay">
+                    <p class="overlay-text"
+                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App · Cloud Storage App</p
+                    >
+                  </div>
+                </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Fresh Coffee</h2>
                   <p class="description">Web Site</p>
