--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-close-btn" data-modal-close>
+        <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-item" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
