--- a/portfolio.html
+++ b/portfolio.html
@@ -67,12 +67,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-1.jpg" alt="Banking App Interface Concept" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Banking App Interface Concept</h2>
@@ -84,12 +83,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-2.jpg" alt="Cashless Payment" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Cashless Payment</h2>
@@ -101,12 +99,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-3.jpg" alt="Meditation App" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Meditation App</h2>
@@ -118,12 +115,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-4.jpg" alt="Taxi Service" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Taxi Service</h2>
@@ -135,12 +131,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-5.jpg" alt="Screen Illustrations" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Screen Illustrations</h2>
@@ -152,12 +147,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-6.jpg" alt="Online Courses" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Online Courses</h2>
@@ -169,12 +163,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-7.jpg" alt="Instagram Stories Concept" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Instagram Stories Concept</h2>
@@ -186,12 +179,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-8.jpg" alt="Organic Food" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Organic Food</h2>
@@ -203,12 +195,11 @@
               <a class="card-project link" href="">
                 <div class="project-thumb">
                   <img src="./images/projects/img-9.jpg" alt="Fresh Coffee" width="360" height="300" />
-                  <div class="overlay">
-                    <p class="overlay-text"
-                      >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App · Cloud Storage App</p
-                    >
-                  </div>
+
+                  <p class="overlay overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App</p
+                  >
                 </div>
                 <div class="card-project-text">
                   <h2 class="project-subtitle subtitle">Fresh Coffee</h2>
