--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             <span class="studi">Studio</span>
           </a>
           <ul class="nav-list list">
-            <li class="nav-list-item"><a class="nav-link link navigation" href="./index.html">Studio</a></li>
+            <li class="nav-list-item"><a class="nav-link link navigation active" href="./index.html">Studio</a></li>
             <li class="nav-list-item"
               ><a class="nav-link link navigation active" href="./portfolio.html">Portfolio</a></li
             >
@@ -55,11 +55,11 @@
           <h1 class="visually-hidden">Portfolio</h1>
           <!-- Filter block -->
           <ul class="filter list">
-            <li><button class="button button-filter" type="button">All</button></li>
-            <li><button class="button button-filter" type="button">Web Site</button></li>
-            <li><button class="button button-filter" type="button">App</button></li>
-            <li><button class="button button-filter" type="button">Design</button></li>
-            <li><button class="button button-filter" type="button">Marketing</button></li>
+            <li><button class="button button-filter btn-fltr" type="button">All</button></li>
+            <li><button class="button button-filter btn-fltr" type="button">Web Site</button></li>
+            <li><button class="button button-filter btn-fltr" type="button">App</button></li>
+            <li><button class="button button-filter btn-fltr" type="button">Design</button></li>
+            <li><button class="button button-filter btn-fltr" type="button">Marketing</button></li>
           </ul>
           <!-- Projects block -->
           <ul class="card-container project list">
